# VideoFolderCleanupTool

./: .gitignore  README.md  pyproject.toml
src/diskcleanup/: __init__.py  cli.py  db.py  evidence.py  fingerprint.py  matcher.py  media.py  models.py  mover.py  planner.py
src/diskcleanup/gui/: __init__.py  jobs.py  server.py  workflows.py
src/diskcleanup/gui/static/: app.js  index.html  styles.css
tests/: test_db.py  test_evidence.py  test_fingerprint.py  test_gui_jobs.py  test_gui_workflows.py  test_matcher.py  test_media.py  test_planner.py
