[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diskcleanup"
version = "0.2.0"
description = "CLI tool for finding exact, near-duplicate, and overlapping video files."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "wakare", email = "wakare_no_kaze@outlook.com" }
]
dependencies = []

[project.scripts]
diskcleanup = "diskcleanup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diskcleanup"]
